<resources>
    <string name="app_name">BingTrading</string>
    <string name="home_button">Home Button</string>
    <string name="create_listing_button">Create listing button</string>
    <string name="profile_button">Profile button</string>
    <string name="add_listing_button">Add listing button</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="some_text">Some text</string>
    <string name="card">Card</string>
    <string name="title">Bing Trading</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="button_to_delete_personal_listing">Button to delete personal listing</string>
    <string name="create">Create</string>
    <string name="sort">Sort</string>
    <string name="description"> Description</string>
    <string name="enter_description_here">Enter description here</string>
    <string name="price">Price</string>
    <string name="enter_price_here">Enter price here</string>
    <string name="picture_url">Picture URL</string>
    <string name="enter_picture_url_here">Enter picture URL here</string>
    <string name="seller_s_email">Seller\'s Email</string>
    <string name="enter_seller_s_email_here">Enter seller\'s email here</string>
    <string name="seller_s_phone">Seller\'s Phone</string>
    <string name="enter_seller_s_phone_here">Enter seller\'s phone here</string>
    <string name="time">Time</string>
    <string name="phone">Phone</string>
    <string name="image_of_listed_item">Image of listed item</string>
    <string name="logout">Logout</string>
    <string name="filter">Filter</string>

    <array name="sortings">
        <item>Description ascending</item>
        <item>Description descending</item>
        <item>Price ascending</item>
        <item>Price descending</item>
    </array>
</resources>