<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondFragment">

    <TextView
        android:id="@+id/textview_message"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/bottom_navigation"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="match_parent"
            android:layout_height="346dp"
            android:contentDescription="Image of listed item"
            tools:src="@tools:sample/avatars" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/textview_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Description" />

            <TextView
                android:id="@+id/textview_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Time"
                android:layout_alignParentRight="true"
                android:paddingRight="75dp"
                />
        </RelativeLayout>

        <TextView
            android:id="@+id/textview_price"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Price" />

        <TextView
            android:id="@+id/textview_seller_email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Email" />

        <TextView
            android:id="@+id/textview_seller_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Phone" />
    </LinearLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="75dp"
        android:layout_alignParentBottom="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">

            <ImageButton
                android:id="@+id/home_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/home_button"
                android:src="@drawable/baseline_home_24" />

            <ImageButton
                android:id="@+id/create_listing_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/create_listing_button"
                android:src="@drawable/baseline_add_circle_24" />

            <ImageButton
                android:id="@+id/profile_button"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:contentDescription="@string/profile_button"
                android:src="@drawable/baseline_person_outline_24" />
        </LinearLayout>
    </com.google.android.material.bottomnavigation.BottomNavigationView>

</RelativeLayout>